--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
     <head charset = "UTF-8">
 
-        <p style="color: white; font-size: 50px; background-color: red;">Lists</p>
+        <div><b>Lists</b></div>
+
+        <link rel="stylesheet" href="./styles.css">
 
     </head>
 
